# meshlib

./: .dockerignore  .gitattributes  .gitignore  .gitmodules  .mailmap  CMakeLists.txt  README.md  docker-compose.yml
.github/actions/python-regression-tests/: action.yml
.github/workflows/: build-test-distribute.yml  build-test-emscripten.yml  build-test-linux-vcpkg.yml  build-test-ubuntu-arm64.yml  build-test-ubuntu-x64.yml  build-test-windows.yml  pip-build.yml  prepare-images.yml  release-body-update.yml  release-tests.yml  test-distribution.yml  unity-nuget-test.yml  update-app-container.yml  update-docs-manual.yml  update-docs.yml  vcpkg-auto-update.yml
cmake/Modules/: CompilerOptions.cmake
docker/: README.dev.md  README.md  emscripten.Dockerfile  emscripten.dev.Dockerfile  emscriptenDockerfile  readme.md  ubuntu20Dockerfile  ubuntu22Dockerfile  ubuntu24Dockerfile
docker/app/: ubuntu20Dockerfile  ubuntu22Dockerfile
docs/: .gitignore  DoxyfileCpp  DoxyfileMain  DoxyfilePy  README.md  index.html  whitelist.txt
docs/MeshLib/dev/html/: APIPage.html  APIPage_8dox.html  About_8dox.html  BasedApplication.html  BasedApplication_8dox.html  BasicMathTypesOverview.html  BasicMathTypesOverview_8dox.html  CSharpSetupGuide_8dox.html  CmakeSetupGuide_8dox.html  CommonDistributionProperties_8dox.html  ContourTriangulation_8dox_8cpp.html  CppSetupGuide_8dox.html  CudaOffset_8dox.html  DataModel.html  DataModel_8dox.html  ExampleContourTriangulation.html  ExampleContourTriangulation_8dox.html  ExampleCudaOffset.html  ExampleDicomFiles.html  ExampleFreeForm.html  ExampleFusion_8dox.html  ExampleGlobalRegistration.html  ExampleLaplacian.html  ExampleMeshBoolean.html  ExampleMeshDecimate.html  ExampleMeshExport.html  ExampleMeshExtrude.html  ExampleMeshFillHole.html  ExampleMeshFixDegeneracies.html  ExampleMeshFromText.html  ExampleMeshICP.html  ExampleMeshLoadSave.html  ExampleMeshModification.html  ExampleMeshOffset.html  ExampleMeshOffsetWeighted.html  ExampleNumpy.html  (+108 more)
docs/MeshLib/html/: APIPage.html  APIPage_8dox.html  About_8dox.html  BasedApplication.html  BasedApplication_8dox.html  BasicMathTypesOverview.html  BasicMathTypesOverview_8dox.html  CSharpSetupGuide_8dox.html  CmakeSetupGuide_8dox.html  CommonDistributionProperties_8dox.html  CppSetupGuide_8dox.html  CudaOffset_8dox.html  DataModel.html  DataModel_8dox.html  ExampleCudaOffset.html  ExampleDicomFiles.html  ExampleFreeForm.html  ExampleGlobalRegistration.html  ExampleLaplacian.html  ExampleMeshBoolean.html  ExampleMeshDecimate.html  ExampleMeshExport.html  ExampleMeshExtrude.html  ExampleMeshFillHole.html  ExampleMeshFixDegeneracies.html  ExampleMeshFromText.html  ExampleMeshICP.html  ExampleMeshLoadSave.html  ExampleMeshModification.html  ExampleMeshOffset.html  ExampleMeshOffsetWeighted.html  ExampleMeshStitchHole.html  ExampleNoiseDenoise.html  ExampleNumpy.html  ExampleNumpyTriangulation.html  ExamplePlotly.html  ExamplePluginOverview.html  ExamplePluginOverview_8dox.html  ExampleSignedDistance.html  ExampleSignedDistancePointToMesh.html  (+90 more)
docs/preprocessors/: c.sed
docs/scripts/: doxygen-awesome-scripts.html  post.sh  pre.sh  remove_noindex.sh  restore_files.sh  update_canonical.sh  update_doc.sh  update_logo_link.sh
docs/scripts/analytics/: html_body.html  html_head.html
docs/tests/: canonicalLink.test.js  package.json
examples/_assets/: bite0.ply  bite0.stl  bite1.ply  bite1.stl  lower.ply  lower.stl  upper.ply  upper.stl
examples/python-examples/: CutMeshByContour.dox.py
examples/web/mrmesh/: package.json
examples/web/threejs/: .gitignore  Editor-Manual.md  README.md  package-lock.json  package.json  serve.ts  tsconfig.json  vite.config.ts
scripts/: README.md  build_source.sh  build_thirdparty.sh  install_apt_requirements.sh  install_thirdparty.sh
scripts/mrbind/: README-generating.md  generate.mk
source/EditableProject/: readme.md
source/MRCommonPlugins/: MRCommonPlugins.vcxproj  MRCommonPlugins.vcxproj.filters
source/MRJavaScript/: CMakeLists.txt  MR2DContoursTriangulation.cpp  MR2to3.cpp  MR2to3.h  MRAABBTree.cpp  MRAABBTreeObjects.cpp  MRAABBTreePoints.cpp  MRAffineXf.h  MRAffineXf2.cpp  MRAffineXf3.cpp  MRArrow.cpp  MRAxis.cpp  MRBezier.cpp  MRBezier.h  MRBitSet.cpp  MRBitSet.h  MRBooleanOperation.cpp  MRBox.cpp  MRBuffer.cpp  MRBuffer.h  MRCloseVertices.cpp  MRCloudPartMapping.cpp  MRColor.cpp  MRCone3.cpp  MRConstants.cpp  MRContoursCut.cpp  MRDipole.cpp  MREdgeLengthMesh.cpp  MREdgeMetric.cpp  MREdgeMetric.h  MREdgePaths.cpp  MREdgePoint.cpp  MREnums.cpp  MRExpected.cpp  MRExpected.h  MRFaceFace.cpp  MRFastWindingNumber.cpp  MRFillContour.cpp  MRFillContourByGraphCut.cpp  MRFillContourByGraphCut.h  (+105 more)
source/MRJavascript/: CMakeLists.txt  MRJavaScript.cpp
source/MRMesh/: MRBestFitPolynomial.h  MRBitSet.h  MRBooleanOperation.h  MRContoursCut.h  MRDenseBox.h  MRFillContourByGraphCut.h  MRLine.h  MRLineSegm.h  MRMeshBoolean.h  MRMeshBuilder.h  MRMeshComponents.cpp  MRMeshExtrude.cpp  MRMeshExtrude.h  MRMeshFwd.h  MRMeshOverhangs.h  MRMovementBuildBody.cpp  MRMovementBuildBody.h  MRPointCloudDivideWithPlane.h  MRPointCloudTriangulation.h  MRSystem.cpp  MRUnionFind.h
source/MRPch/: MRWasm.h
source/MRPython/: MRPython.h
source/MRViewer/: MRViewer.vcxproj  MRViewer.vcxproj.filters
source/MRViewerApp/: CMakeLists.txt
source/MRVoxels/: MRFixUndercuts.h
source/mrviewerpy/: mrviewerpy.vcxproj
wasm/: download_desktop_window.js  error.js  index.html  index_mrjs.html  index_mrmesh.html  io_files.js  main.js  popups.js  post_load.js  post_load_mrjs.js  server.py  wasm_loader.js  wasm_loader_mrjs.js  web_request.js
wasm/css/: main.css  styles.css
wasm/meshlib/: CONTRIBUTING  README.md  bundle.ts  package-lock.json  package.json  rollup.config.js  tsconfig.bundle.json  tsconfig.json
wasm/meshlib/src/: MRJavaScript.d.ts  MRJavaScript.js  MRJavaScript.wasm  index.ts
wasm/meshsdk/: .gitignore  .prettierignore  README.md  bundle.sh  bundle.ts  package-lock.json  package.json
wasm/meshsdk/src/: MRJavaScript.d.ts  MRJavaScript.data  MRJavaScript.js  MRJavaScript.wasm  index.ts
(+22798 files in other folders)
